@@ -1,1 +1,2 @@
 SUBDIRS = libexpat
+EXTRA_DIST = Changes COPYING README expat_config.h
