@@ -7,6 +7,7 @@
 - Added size and age filters to agent parameters File.Size and File.Count 
 - PortCheck subagent: connection timeout made configurable
 - NXSL: added functions trim(), ltrim(), and rtrim()
+- Expat XML parser bundled with NetXMS source package
 - Fixed issues: #267, #268, #269, #270, #272, #273, #274
 
 
